<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    android:visibility="visible"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/rel_anything"
        android:layout_width="296dp"
        android:layout_height="491dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="56dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/layout_shadow_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></RelativeLayout>

    <ImageView
        android:id="@+id/fundo"
        android:layout_width="417dp"
        android:layout_height="370dp"
        android:layout_marginBottom="364dp"
        android:background="@color/purple_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription"
        tools:srcCompat="@color/purple_200" />

    <ImageView
        android:id="@+id/fundo2"
        android:layout_width="453dp"
        android:layout_height="562dp"
        android:layout_marginStart="108dp"
        android:layout_marginBottom="96dp"
        android:background="@color/purple_200"
        android:cropToPadding="false"
        android:rotation="-236"
        android:rotationX="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/fundo"
        tools:ignore="ContentDescription"
        tools:srcCompat="@color/purple_200" />

    <ImageView
        android:id="@+id/caixa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_shadow_white"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/caixa"

        />

    <ImageView
        android:id="@+id/ibmlogo2"
        android:layout_width="243dp"
        android:layout_height="72dp"
        android:background="@drawable/ic_ibm_rebus_h_pos_black_rgb"
        android:backgroundTint="@color/purple_200"
        android:contentDescription="@string/ibm_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.429" />

    <Button
        android:id="@+id/btnEntrar"
        style="@style/btn"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="22dp"
        app:backgroundTint="@null"
        android:fontFamily="@font/ibm_plex_sans_medium"
        android:text="@string/login"
        android:textColor="#004D40"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/createland"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibmlogo2"
        app:layout_constraintVertical_bias="0.0"
        app:rippleColor="@color/teal_200"
        app:strokeColor="@color/teal_200" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="180dp"
        android:layout_height="58dp"
        android:fontFamily="@font/ibm_plex_sans_medium"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/ibmlogo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/caixa"
        app:layout_constraintVertical_bias="0.392" />

    <TextView
        android:id="@+id/createland"
        android:layout_width="143dp"
        android:layout_height="23dp"
        android:layout_marginBottom="44dp"
        android:fontFamily="@font/ibm_plex_sans_medium"
        android:text="@string/createaccount"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/caixa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibmlogo2"
        app:layout_constraintVertical_bias="0.895"
        tools:text="Create an account!" />


</androidx.constraintlayout.widget.ConstraintLayout>