<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:nestedScrollingEnabled="true"
    android:visibility="visible"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_home">


    <fragment
        android:id="@+id/nav_host_fragment_content_home"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="410dp"
        android:layout_height="79dp"
        android:visibility="visible"

        app:defaultNavHost="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/mobile_navigation"
        tools:visibility="visible" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        style="@style/CardView.Dark"
        android:layout_width="333dp"
        android:layout_height="423dp"
        android:layout_marginTop="36dp"
        android:visibility="visible"
        app:cardBackgroundColor="@color/cardview_shadow_end_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nav_host_fragment_content_home"
        app:layout_constraintVertical_bias="0.68"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:overScrollMode="never"
            android:scrollbars="vertical"
            android:splitMotionEvents="true">

            <TextView
                android:id="@+id/induction2"
                android:layout_width="202dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="28dp"
                android:drawablePadding="16dp"
                android:fontFamily="@font/ibm_plex_sans"
                android:gravity="center_vertical"
                android:text="@string/induction"
                android:textAlignment="gravity"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:drawableStartCompat="@drawable/ic_vector_open" />

            <ListView
                android:id="@+id/tarefasinduction"
                android:layout_width="239dp"
                android:layout_height="224dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:cacheColorHint="@color/purple_200"
                android:overScrollMode="ifContentScrolls"
                android:visibility="gone" />

            <TextView
                android:id="@+id/induction3"
                android:layout_width="202dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="28dp"
                android:drawablePadding="16dp"
                android:fontFamily="@font/ibm_plex_sans"
                android:gravity="center_vertical"
                android:text="@string/self_paced"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:drawableLeftCompat="@drawable/ic_vector_open" />

            <ListView
                android:id="@+id/listaselfpaced"
                android:layout_width="238dp"
                android:layout_height="224dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:overScrollMode="ifContentScrolls"
                android:visibility="gone" />

            <TextView
                android:id="@+id/induction4"
                android:layout_width="202dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="12dp"
                android:drawablePadding="16dp"
                android:fontFamily="@font/ibm_plex_sans"
                android:gravity="center_vertical"
                android:text="@string/badges"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:drawableLeftCompat="@drawable/ic_vector_open" />

            <ListView
                android:id="@+id/listabadges"
                android:layout_width="238dp"
                android:layout_height="224dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:overScrollMode="ifContentScrolls"
                android:visibility="gone" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="333dp"
        android:layout_height="92dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nav_host_fragment_content_home"
        app:layout_constraintVertical_bias="0.39">

        <LinearLayout
            android:layout_width="333dp"
            android:layout_height="92dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="107dp"
                android:layout_height="match_parent"
                android:contentDescription="Avatar of a person"
                app:srcCompat="@drawable/avatar" />

            <LinearLayout
                android:layout_width="228dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:fontFamily="@font/ibm_plex_sans_medium"
                    android:gravity="center_vertical"
                    android:paddingLeft="24dp"
                    android:text="@string/welcome2"
                    android:textAlignment="gravity"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/yourname"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:fontFamily="@font/ibm_plex_sans_medium"
                    android:text="Jessica"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    tools:ignore="HardcodedText" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>