<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    android:visibility="visible"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/rel_anything"
        android:layout_width="296dp"
        android:layout_height="491dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="56dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/layout_shadow_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></RelativeLayout>

    <ImageView
        android:id="@+id/fundo"
        android:layout_width="417dp"
        android:layout_height="370dp"
        android:layout_marginBottom="364dp"
        android:background="@color/purple_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription"
        tools:srcCompat="@color/purple_200" />

    <ImageView
        android:id="@+id/fundo2"
        android:layout_width="453dp"
        android:layout_height="562dp"
        android:layout_marginStart="84dp"
        android:layout_marginBottom="108dp"
        android:background="@color/purple_200"
        android:cropToPadding="false"
        android:rotation="-236"
        android:rotationX="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/fundo"
        tools:ignore="ContentDescription"
        tools:srcCompat="@color/purple_200" />

    <ImageView
        android:id="@+id/caixa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_shadow_white"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:srcCompat="@drawable/caixa" />

    <Button
        android:id="@+id/btnlogin"
        style="@style/btn"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginEnd="22dp"
        android:fontFamily="@font/ibm_plex_sans_medium"
        android:text="@string/login"
        android:textColor="#004D40"
        android:visibility="visible"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/fgtpass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginpasscode"
        app:layout_constraintVertical_bias="0.597"
        app:rippleColor="@color/teal_200"
        app:strokeColor="@color/teal_200" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="180dp"
        android:layout_height="58dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/ibm_plex_sans"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/caixa" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/ibm_plex_sans"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/fgtpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:fontFamily="@font/ibm_plex_sans"
        android:text="Forgot my password"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/jatenho"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/jatenho"
        android:layout_width="143dp"
        android:layout_height="23dp"
        android:layout_marginBottom="29dp"
        android:clickable="true"
        android:fontFamily="@font/ibm_plex_sans"
        android:text="@string/createaccount"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/caixa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Create an account!" />

    <EditText
        android:id="@+id/loginpasscode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="204dp"
        android:drawableLeft="@drawable/ic__643767_key_keys_main_password_privilege_icon"
        android:drawablePadding="8dp"
        android:ems="10"
        android:fontFamily="@font/ibm_plex_sans_medium"
        android:hint="password"
        android:inputType="numberPassword"
        android:minHeight="48dp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/caixa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/loginemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:drawableLeft="@drawable/ic__user"
        android:drawablePadding="8dp"
        android:ems="10"
        android:fontFamily="@font/ibm_plex_sans_medium"
        android:hint="e-mail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@+id/loginpasscode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rel_anything"
        app:layout_constraintVertical_bias="0.727"
        app:srcCompat="@drawable/ic_ibm_rebus_h_pos_black_rgb" />


</androidx.constraintlayout.widget.ConstraintLayout>